styles.css
*{
    box-sizing: border-box;
}

body {
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
}

/* TOP NAV */



/* MAIN IMAGE SECTION */

.home-image-container {
    max-width: 1440px;
    margin: 0 auto;
}

.home-page-image {
    width: 100%;
    margin-bottom: -4px;
}



/* FOOTER */

.footer-section {
    background-color: black;
}

.footer-container {
    max-width: 1312px;
    height: 70px;
}



/* BIO */

.main-content-section {
    max-width: 1312px;
    height: 730px;
}

.bio-content-container {
    max-width: 600px;
    float: right;
    padding: 20px 36px;

}

.bio-content-words {
    color: grey;
    line-height: 1.3;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
}

.bio-image-container {
    max-width: 600px;
    height: 300px;
    margin-top: 60px;
}

.bio-image {
    width: 525px;
    height: 300px;

}


/* EXHIBITIONS */

.exhib-content-section {
    display: flex;
    height: 800px;
}

.exhib-words-container {
    max-width: 800px;
    padding: 30px 90px 0px 25px;
}

.exhib-words {
    color: grey;
    line-height: 1.3;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300px;
}

.exhib-image-container {
    max-width: 600px;
    height: 800px;
    margin-left: 40px;
}

.exhib-image {
    width: 500px;
    height: 800px;
}



/* ARTWORK CAROUSEL */

.carousel {
    position: relative;
    height: 600px;
    width: 80%;
    margin: 0 auto;
}

.carousel__image {
    width: 100%;
    height: 100%;
    object-fit: scale-down;
    position: relative;
    z-index: -1;
}

.carousel__track-container {
    height: 100%;
    position: relative;
    overflow: hidden;
}

.carousel__track {
    padding: 0;
    margin: 0;
    list-style: none;
    position: relative;
    height: 100%;
    transition: transform 250ms ease-in;
}

.carousel__slide {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%
}

.carousel__button {
    position: absolute;
    z-index: 2;
    top: 50%;
    transform: translateY(-50%);
    background: transparent;
    border: 0;
    width: 30vw;
    height: 400px;
    z-index: 10;
}

.carousel__button--left {
    left: -60px;
    cursor: w-resize;
    z-index: 2;
}

.carousel__button--right {
    right: -60px;
    cursor: e-resize;
    z-index: 2;
}

.carousel__button img {
    width: 12px;
}

/* ART PIECES */

.image-1 {
    height: 500px;
    margin-top: 50px;
}

.image-2 {
    height: 350px;
    margin-top: 125px;
}

.image-3 {
    height: 400px;
    margin-top: 100px;
}

.image-4 {
    height: 420px;
    margin-top: 90px;
}

.image-5 {
    height: 400px;
    margin-top: 100px;
}

.image-6 {
    height: 420px;
    margin-top: 90px;
}

.image-7 {
    height: 300px;
    margin-top: 150px;
}

.image-8 {
    height: 380px;
    margin-top: 110px;
}

.image-9 {
    height: 470px;
    margin-top: 65px;
}

.image-10 {
    height: 390px;
    margin-top: 105px;
}

.image-11 {
    height: 400px;
    margin-top: 100px;
}

.image-12 {
    height: 450px;
    margin-top: 75px;
}

.image-13 {
    height: 400px;
    margin-top: 100px;
}

.image-14 {
    height: 500px;
    margin-top: 50px;
}

.image-15 {
    height: 525px;
    margin-top: 37.5px;
}

.image-16 {
    height: 425px;
    margin-top: 87.5px;
}

.image-17 {
    height: 350px;
    margin-top: 125px;
}


/*
.carousel__nav {
    display: flex;
    justify-content: center;
    padding: 10px 0;

}

.carousel__indicator {
    border: 0;
    border-radius: 50%;
    width: 15px;
    height: 15px;
    background: rgba(0, 0, 0, .3);
    margin: 0 12px;
    cursor: pointer;
}

.carousel__indicator.current-slide {
    background: rgba(0, 0, 0, .75);
}
*/

.art-footer-section {
    background-color: black;
}

.art-footer-container {
    max-width: 1312px;
    height: 70px;
    bottom: 0px;
}

.art-caption {
    font-family: 'Montserrat', sans-serif;
    font-size: 12px;
    color: black;
    margin-bottom: -50px;
    height: 2rem;
}

/* ART CAPTIONS */

.caption-1 {
    text-align: center;
}

.caption-2 {
    text-align: center;
}

.caption-3 {
    transform: translateX(5%);
}

.caption-4 {
    transform: translateX(7.5%);
}

.caption-5 {
    transform: translateX(4.5%);
}

.caption-6 {
    transform: translateX(7.5%);
}

.caption-7 {
    transform: translateX(9%);
}

.caption-8 {
    transform: translateX(8%);
}

.caption-9 {
    text-align: center;
}

.caption-10 {
    transform: translateX(6%);
}

.caption-11 {
    transform: translateX(9%);
}

.caption-12 {
    text-align: center;
}

.caption-13 {
    transform: translateX(9%);
}

.caption-14 {
    text-align: center;
    transform: translateX(-3%);
}

.caption-15 {
    text-align: center;
    width: 395px;
    height: 2rem;
    margin: 0 auto;
}

.caption-16 {
    transform: translateX(8.5%);
    width: 540px;
}

.caption-17 {
    text-align: center;
    margin: 0 auto;
}

/* CONTACT PAGE */

hr {
    background: none;
    border: none;
    width: 300px;

}

.contact-wrapper {
    max-width: 800px;
    height: 800px;
    margin: 0 auto;
    padding-top: 100px;
    padding-bottom: 75px;
}

.contact-form {
    width: 100%;
    margin: 0 auto;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    color: rgb(109, 105, 105);
    background-color: lightgray;
    padding: 30px 30px 30px 30px;
    border-radius: 5px;
}

.contact-title {
    padding-bottom: 30px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    color: grey;
    text-align: center;
}

#fname {
    height: 2rem;
    width: 300px;
    border: 1px solid #ccc;
    border-radius: 5px;
    margin-top: 0px;
}




#email {
    height: 2rem;
    width: 300px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

#phone-number {
    height: 2rem;
    width: 225px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

#query-heading {
    height: 2rem;
    width: 224px;
    border: 1px solid #ccc;
    border-radius: 5px;
}

#subject {
    border: 1px solid #ccc;
    border-radius: 5px;
    margin-top: -10px;
}

input[type=submit] {
    border: 1.5px solid rgb(170, 169, 169);
    border-radius: 5px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    padding: 12px 20px;
}

/* THANK YOU MESSAGE */


.thanks-container {
    max-width: 500px;
    height: 200px;
    margin: 0 auto;
    padding-top: 100px;
    padding-bottom: 505px;
}

.thanks-message {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    color: grey;
    text-align: center;
}

/* NEWS MESSAGE */

.news-container {
    max-width: 500px;
    height: 200px;
    margin: 0 auto;
    padding-top: 100px;
    padding-bottom: 100px;
}

.news-message {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    color: grey;
    text-align: center;
    line-height: 1.3;
}

#mc_embed_signup {
    clear:left;
    font:14px;
    font-family: 'Montserrat', sans-serif;
    width: 80%;
    margin: 0 auto;
    margin-top: 60px;
    margin-bottom: 129px;
    padding-bottom: 85px;
}




/*DROPDOWN */



.sticky-header {
    position: sticky;
    z-index: 2;
    top: 0;
}

nav {
    width: 100%;
    height: 81px;
    background-color: black;
}

.nav-wrapper {
    max-width: 1250px;
    height: 81px;
    margin: 0 auto;
    padding: 1rem 0rem 65px;
}


.logo {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    float: left;
    height: 60px;
    position: absolute;
    top: 10.5px;
    color: grey;
    padding-left: 10px;
    margin-left: 10px;
    margin-top: 10px;

}

.logo-style {
    text-decoration: none;
    color: inherit;
}


/* MAIN HEADINGS GROUP*/

.nav-icons {
    float: right;
    padding-right: 30px;
    margin-top: -12px;
    margin-bottom: 0px;
    margin-right: 10px;
}

/* EACH MAIN HEADING */
nav .nav-wrapper ul li {
    float: left;
    list-style: none;
    position: relative;
    z-index: 3;
    margin-left: 0px;
    height: 75px;
    width: 75px;
}

/* LINKS WITHIN EACH HEADING */
nav .nav-wrapper ul li a {
    display: block;
    color: grey;
    font-size: 14px;
    text-decoration: none;
}


.Instagram-icon {
    padding-top: 20.5px;
    padding-bottom: 17.5px;
    padding-right: 14px;
    padding-left: 14px;
}

.Instagram {
    width: 34px;
    height: 34px;
}

.dropdown-icon {
    padding-top: 21.75px;
    padding-bottom: 19.5px;
    padding-right: 14px;
    padding-left: 14px;
}

.IG-dropdown {
    display: none;
    position: absolute;
    z-index: 3;
    padding-left: 0px;
    padding-right: 5px;
    padding-top: 174px;
    background-color: rgb(99, 98, 98);
    /* border-radius: 0px 0px 4px 4px; */
    width: 150px;
    height: 250px;
    margin-top: -55px;
    margin-left: -102px;
}

.pages-dropdown {
    display: none;
    position: absolute;
    padding-left: 0px;
    padding-right: 5px;
    padding-top: 78px;
    background-color: rgb(99, 98, 98);
    /* border-radius: 0px 0px 4px 4px; */
    width: 150px;
    height: 250px;
    margin-top: -55px;
    margin-left: -99px;
    z-index:100;
}

/* HOVER TO ACTIVATE THE DROPDOWN */
nav .nav-wrapper ul li:hover ul {
    display: block;
}


/* EACH DROPDOWN SQUARE */
nav .nav-wrapper ul li ul li {
    width: 120px;
    height: 2rem;
    /* border-radius: 4px; */
    padding-left: 0px;
    margin-left: 0px;

}

/* EACH DROPDOWN BUTTON LINK */

nav .nav-wrapper ul li ul li a {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    padding: 8px 14px;
    color: white;

}

/* STYLE WHEN HOVER ON DROPDOWN BUTTON */

nav .nav-wrapper ul li ul li a:hover {
    color: black;
}

/* Utility classes */
.u-off-screen {
    position: absolute;
    left: -9999px;
}

